# BUDGET-APP

./: .env.example  .gitignore  ANALYSE_PRODUIT_POST_CORRECTIONS_V3.md  CODE_DEDUPLICATION_REPORT.md  CORRECTION_AUTHENTIFICATION.md  CRUSH.md  FRONTEND_UI_FIXES_SUMMARY.md  GUIDE_TEST_FINAL_IMPORT_CSV.md  IMPLEMENTATION_REPORT_CLASSIFICATION_API.md  INFRASTRUCTURE_STATUS_REPORT.md  INTERFACE_CLASSIFICATION_UX.md  MISSION_COMPLETED_SUMMARY.md  MISSION_INTELLIGENCE_CLASSIFICATION_COMPLETED.md  RAPPORT_TEST_CSV_IMPORT.md  RAPPORT_VALIDATION_COMPLETE_QA.md  README.md  ROADMAP_MASTER_V3.md  SECURITY_FIXES_SUMMARY.md  SOLUTION_WSL_NEXTJS_FINALE.md  SSR_HYDRATION_VALIDATION_REPORT.md  START_COMPLETE.ps1  START_SIMPLE.bat  SYSTÈME_RECHERCHE_WEB_COMPLET_RAPPORT.md  TEST_COVERAGE_REPORT.md  VALIDATION_INTERFACE_SETTINGS_REPORT.md  functional_validation_report.json  queue_error_validation.json  run_all_tests.sh  ssr_validation_report.json  start-development.sh  start_wsl.sh  stop-development.sh  test-cors.html  test-navigation.csv  test_dashboard_fix.md  test_e2e_navigation.py  test_final.js  test_frontend_validation.py  test_functional_validation.js  test_queue_error.js  (+4 more)
backend/: .env.example  .env.production.template  .env.redis.example  01_happy_path_janvier_2024.csv  API_DEVELOPER_GUIDE.md  API_DOCUMENTATION_COMPLETION_REPORT.md  BACKEND_OPTIMIZATION_REPORT.md  BACKEND_VERIFICATION_REPORT.md  BACKUP_SYSTEM.md  Budget_Famille_API_v2.3.postman_collection.json  COMPREHENSIVE_QA_VALIDATION_REPORT.md  CONSOLIDATION_GUIDE.md  CONSOLIDATION_MIGRATION_GUIDE.md  CSV_IMPORT_FIX_SUMMARY.md  CSV_VALIDATION_FINAL_REPORT.md  CSV_VALIDATION_QA_REPORT.md  DASHBOARD_ENDPOINTS_VERIFICATION_SUMMARY.md  Dockerfile  ENDPOINTS_VERIFICATION_REPORT.md  FIXED_LINES_API_SUMMARY.md  Fix-WindowsDependencies.ps1  GUIDE_DEMARRAGE_WINDOWS.md  GUIDE_DEPANNAGE_WINDOWS.md  INSTALLATION_GUIDE.md  INTELLIGENCE_CLASSIFICATION_GUIDE.md  INTELLIGENT_TAG_SYSTEM_SUMMARY.md  JWT_AUTH_FIX_SUMMARY.md  MIGRATION_IMPLEMENTATION_PLAN.md  MIGRATION_SUMMARY_TAG_SUGGESTIONS.md  ML_ARCHITECTURE_PLAN.md  ML_FEEDBACK_SYSTEM_README.md  ML_IMPLEMENTATION_ROADMAP.md  ML_OPTIMIZATION_SUMMARY.md  ML_PHASE2_SUMMARY.md  PROVISIONS_API.md  QA_REPORT_BUDGET_FAMILLE_V23.md  QUALITY_REPORT_CSV_IMPORT_FIX.md  README_WINDOWS.md  README_WINDOWS_FIXES.md  REDIS_DEPLOYMENT_GUIDE.md  (+240 more)
backend/.claude-flow/metrics/: performance.json  task-metrics.json
backend/archive/: conftest.py
backend/backups/: backup_manifest.txt
backend/backups/manual/: budget.db.backup_20250810_153328_9866  budget.db.backup_20250810_154454_13445
backend/config/: settings.py
backend/dependencies/: __init__.py  auth.py  database.py
backend/middleware/: error_handler.py  security.py
backend/migrations/: add_classification_confidence.py
backend/models/: ai_cache.py  database.py  enhanced_schemas.py  gamification.py  optimized_schemas.py  schemas.py  user.py
backend/routers/: ai.py  analytics.py  auth.py  auto_tagging.py  balance.py  budgets.py  cache.py  classification.py  coach.py  config.py  custom_categories.py  dashboard.py  dashboard_optimized.py  enhanced_auth.py  fixed_expenses.py  gamification.py  import_advisor.py  import_export.py  intelligence.py  intelligent_tags.py  ml_enhanced_classification.py  ml_feedback.py  ml_tagging.py  pdf_export.py  predictions.py  provisions.py  receipts.py  research.py  smart_import.py  tag_automation.py  tag_categories.py  tags.py  transactions.py  unified_tagging.py
backend/scripts/: check_database.py  check_env_config.py  demo_classification_system.py  final_e2e_validation.py  import_existing_tags.py  intelligence_system.py  intelligence_system_specification.py  migrate_expense_types.py  ml_feedback_demo.py  run_qa_validation_suite.py  validate_api_documentation.py  validate_import_fix.py
backend/services/: __init__.py  ai_analysis.py  ai_cache.py  batch_processor.py  calculations.py  chat_memory.py  enhanced_auto_tagging_service.py  expense_classification.py  import_service.py  intelligent_tag_service.py  merchant_knowledge_service.py  ml_feedback_learning.py  ml_tagging_engine.py  ocr_service.py  optimized_calculations.py  pdf_export.py  pdf_parser.py  query_performance.py  redis_cache.py  scheduler_service.py  smart_parser.py  tag_automation.py  tag_suggestion_service.py  transaction_service.py  unified_classification_service.py  unified_ml_tagging_service.py  web_research_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/csv-samples/: 01_happy_path_janvier_2024.csv
backend/tests/demos/: conftest.py  test_franprix_learning.py  test_hotel_detection.py  test_merchant_learning.py  test_pokawa_specific.py  test_pokawa_specific_demo.py
backend/tests/fixtures/: conftest.py  test_factories.py
backend/tests/integration/: __init__.py  conftest.py  test_api_performance.py  test_auth.py  test_couple_balance.py  test_provisions_api.py  (+4 more)
backend/utils/: __init__.py  auth_utils.py  calculations.py  core_functions.py  error_handlers.py  formatters.py  validators.py
(+409 files in other folders)
